--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "static-site",
+  "name": "readme.md-generator",
   "version": "1.0.0",
+  "description": "create readme.md file using command-line terminal",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.3.1"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MushtaqSafie/README.md-Generator.git"
   },
-  "keywords": [],
-  "description": ""
+  "keywords": [
+    "markdown",
+    "file",
+    "generator"
+  ],
+  "author": "mushtaq safie",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MushtaqSafie/README.md-Generator/issues"
+  },
+  "homepage": "https://github.com/MushtaqSafie/README.md-Generator#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3",
+    "node": "^15.7.0"
+  }
 }
